# Expense_Splitter

./: .gitignore  README.md  main.py  netlify.toml  pyproject.toml
backend/: database.py  expense_splitter.db  main.py  requirements.txt  services.py
frontend/: index.html
