[project]
name = "expense-splitter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiofiles==23.2.1",
    "fastapi==0.111.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.30",
    "uvicorn[standard]==0.29.0",
]
